--- a/app/src/main/res/layout/fragment_photo_crop.xml
+++ b/app/src/main/res/layout/fragment_photo_crop.xml
@@ -1,12 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ /**
-  ~  * Created by Ali YÜCE on 3/2/20 11:18 PM
-  ~  * https://github.com/mayuce/
-  ~  * Copyright (c) 2020 . All rights reserved.
-  ~  * Last modified 3/2/20 11:10 PM
-  ~  */
-  -->
-
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -20,8 +12,7 @@
         android:id="@+id/rlContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
-        tools:context=".ImageCropActivity">
+        android:background="#ffffff">
 
         <LinearLayout
             android:layout_width="match_parent"
